# ComfyUI-UtilsCollection

./: AGENTS.md  README.md  __init__.py  composite_nodes.py  encoder_helpers.py  encoder_nodes.py  helper_functions.py  image_nodes.py  legacy_nodes.py  loader_nodes.py  node_metadata.py  node_replacements.py  parameter_nodes.py  preset_nodes.py  presets_collection.py  pyproject.toml  requirements.txt  scheduler_nodes.py  text_nodes.py  textgen_nodes.py  utils_nodes.py  vlm_nodes.py  vlm_presets.py
.github/workflows/: publish.yml
agent_prompts/: presets_style_addition.txt
tests/: test_bounding_box.py  test_composite_nodes.py  test_encoder_correctness.py  test_layered_placement.mjs  test_node_metadata.py  test_parameter_nodes.py  test_preset_parentheses.py  test_primitive_nodes.py  test_textgen_formula.py  test_visual_fusion.py
web/: layered_background_editor.js  placement_geometry.js
workflows/: LayeredBackgroundComposite.json  TextGenerateVisualFusion.json  UnifiedBackgroundReplace.json
